# MeroDocs

./: MIGRATION.md  README.md  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: deploy-icp-canister.yml
app/: .env  .env.example  package.json  pnpm-lock.yaml  setup-pdfjs.sh  tailwind.config.js  tsconfig.json  vite.config.js
app/public/: pdf.worker.min.js
app/src/: App.tsx  index.css  index.tsx
app/src/api/: agreementService.ts  clientApi.ts  defaultContextService.ts  documentService.ts  nodeApi.ts
app/src/components/: AuditTrail.tsx  CalimeroConnectionRequired.tsx  ConsentModal.tsx  ICPAuth.tsx  LegalChatbot.tsx  MobileHeader.tsx  MobileLayout.tsx  PDFViewer.css  PDFViewer.tsx  Sidebar.tsx  SignatureOverlay.tsx  SignaturePad.tsx
app/src/contexts/: IcpAuthContext.tsx  ThemeContext.tsx
app/src/hooks/: useAnimation.ts  useDefaultContext.ts
app/src/lib/: utils.ts
app/src/services/: embeddingService.ts  pdfService.ts
app/src/theme/: index.ts
canisters/: CI-CD-SETUP.md  Cargo.toml  dfx.json
canisters/.dfx/local/: canister_ids.json  network-id
canisters/.dfx/playground/: canister_timestamps.json
canisters/ai_document_analysis/: Cargo.toml  lib.rs
canisters/dao_agreement/: dao_agreement.did  lib.rs
canisters/llm_chatbot/: cargo.toml  lib.rs  llm_chatbot.did
logic/: Cargo.toml
logic/res/: mero_docs.wasm
logic/src/: lib.rs
logic/src/types/: id.rs
merodocs_registry/: CI-CD-SETUP.md  README.md
merodocs_registry/.dfx/local/: canister_ids.json  (+1 more)
merodocs_registry/backend/: Cargo.toml  lib.rs
workflows/: bootstrap.yml
(+36 files in other folders)
