[package]
name = "ai_document_analysis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
path = "lib.rs"

[dependencies]
candid = "0.10.10"
ic-cdk = "0.16.0"
ic-cdk-macros = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

